# cobs

./: meson.build
include/cobs/: cobs.h
src/: recv.c  send.c
tests/: test-cobs.c
